--- a/meta/main.yml
+++ b/meta/main.yml
@@ -11,3 +11,7 @@ galaxy_info:
     - all
   categories:
   - system
+
+dependencies:
+  - {role: geerlingguy.git, tags: git }
+  - {role: nicholsn.miniconda, tags: conda }
