--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -1,2 +1,3 @@
 conda_dir: "/home/vagrant/miniconda"
 conda_recipes_url: "https://github.com/conda/conda-recipes.git"
+conda_dest: "/tmp/conda-recipes"
