--- a/vars/main.yml
+++ b/vars/main.yml
@@ -1,14 +1,6 @@
 # file: /vars/main.yml
 
 conda_packages:
- - autoconf
- - automake
- - gcc
- - bison
- - flex
- - gcc-c++
- - gettext
- - kernel-devel
- - make
- - m4
- - ncurses-devel
+ - jedi
+ - sexpdata
+ - epc
