--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -11,6 +11,9 @@
   conda: name=ipython executable={{ conda_dir }}/bin/conda
 
 - name: CONDA | build and install packages
-  conda: name="{{item}}" executable={{ conda_dir }}/bin/conda source={{ conda_dest }}/python/"{{item}}" extra_args="--use-local"
+  conda: name={{ item }}
+         executable={{ conda_dir }}/bin/conda
+         source={{ conda_dest }}/python/{{ item }}
+         extra_args="--use-local"
   with_items: conda_packages
   register: output
