--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -8,7 +8,7 @@
   git: repo={{ extra_conda_recipes_url }} dest={{ extra_conda_dest }} accept_hostkey=yes
   register: conda_recipes_downloaded
 
-- name: CONDA | merge extra conda-recipes into main conda-recipes
+- name: CONDA | get dirs that needs to be merged
   shell: ls -d {{ extra_conda_dest }}/
   register: dir_names
 
