fix deprication warning

--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -27,5 +27,5 @@
          executable={{ conda_dir }}/bin/conda
          source={{ conda_dest }}/{{ item.path }}
          extra_args="--use-local"
-  with_items: conda_packages
+  with_items: {{ conda_packages }}
   #register: output
