don't reload repo

--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -1,7 +1,7 @@
 # main.yml
 
 - name: CONDA | get conda-recipes from git repository
-  git: repo={{ conda_recipes_url }} dest={{ conda_dest }} accept_hostkey=yes force=yes
+  git: repo={{ conda_recipes_url }} dest={{ conda_dest }} accept_hostkey=yes force=yes update=no
   register: conda_recipes_downloaded
 
 - name: CONDA | get extra conda-recipes from git repository
